@@ -6,7 +6,7 @@ import net.swofty.types.generic.item.impl.Enchanted;
 import net.swofty.types.generic.user.SkyBlockPlayer;
 import net.swofty.types.generic.user.statistics.ItemStatistics;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class KatFlower implements CustomSkyBlockItem, Enchanted {
@@ -15,14 +15,14 @@ public class KatFlower implements CustomSkyBlockItem, Enchanted {
         return ItemStatistics.EMPTY;
     }
     @Override
-    public List<String> getAbsoluteLore(SkyBlockPlayer player, SkyBlockItem item) {
-        return Arrays.asList(
+    public List<String> getLore(SkyBlockPlayer player, SkyBlockItem item) {
+        return new ArrayList<>(List.of(
                 "§7Give this Kat the Pet Sitter",
                 "§7in order to skip §91 day §7of",
                 "§7wait time while upgrading your",
                 "§7pet!",
                 "",
                 "§eRight-click on Kat to use."
-        );
+        ));
     }
 }
